Added h1 to photo.html and changed img's margin top

--- a/image.html
+++ b/image.html
@@ -14,11 +14,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 class="text-center mt-3">Photo</h1>
     <img
       src="images/banh-hoi.jpg"
       alt="banh hoi"
       width="70%"
-      class="img-fluid mx-auto rounded d-block mt-5 shadow"
+      class="img-fluid mx-auto rounded d-block mt-2 shadow"
     />
     <div class="d-flex justify-content-center">
       <div class="menu p-3"><a href="/">Homepage</a></div>
