--- a/image.html
+++ b/image.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=img, initial-scale=1.0" />
-    <title>Image</title>
+    <meta
+      name="description"
+      content="How banh hoi - Viet traditional dish - looks like"
+    />
+    <title>Banh hoi - A Viet traditional dish|banhhoi.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
