--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <meta
+      name="description"
+      content="Contact us for more details about banh hoi recipes, ingredients, and taste."
+    />
+    <title>Contact us|banhhoi.com</title>
   </head>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
